fix: responsiveness fixes | arrow not showing on Button with arrow prop

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,6 +108,6 @@ html {
     }
 
     .card {
-        @apply rounded-2xl bg-gradient-to-tr from-white to-accent-100 w-full border border-neutral-500 max-w-md mx-auto shadow-lg flex flex-col gap-5 p-4 lg:p-7;
+        @apply rounded-2xl bg-gradient-to-tr from-white to-accent-100 w-full border border-neutral-500 max-w-md mx-auto shadow-lg flex flex-col gap-5 p-4 md:p-7;
     }
 }
